Updated literature and gitignore

--- a/report/bib.bib
+++ b/report/bib.bib
@@ -1,6 +1,28 @@
 @article {
     fragments,
-    title = {Corona rammer metroens økonomi langt hårdere end DSB’s},
-    url = {https://indblik.net/2020/05/20/corona-rammer-metroens-oekonomi-langt-haardere-end-dsbs/},
+    title = {Fragments},
+    url = {https://developer.android.com/guide/fragments},
     year = {2020}
+}
+
+@article {
+    viewmodel,
+    title = {Viewmodel overview},
+    url = {https://developer.android.com/topic/libraries/architecture/viewmodel},
+    year = {2020}
+}
+
+@article {
+    naming-convention,
+    title = {AOSP Java Code Style for Contributors},
+    url = {https://source.android.com/setup/contribute/code-style#follow-field-naming-conventions},
+    year = {2020}
+}
+
+@book {
+    nerd,
+    title = {Android Programming - The Big Nerd Ranch Guide},
+    edition = {4th},
+    isbn = {978-0135245125},
+    year = {2019}
 }
