Added constraint layout to bib

--- a/report/bib.bib
+++ b/report/bib.bib
@@ -19,6 +19,13 @@
     year = {2020}
 }
 
+@article {
+    constraint,
+    title = {ConstraintLayout},
+    url = {https://developer.android.com/reference/androidx/constraintlayout/widget/ConstraintLayout},
+    year = {2020}
+}
+
 @book {
     nerd,
     title = {Android Programming - The Big Nerd Ranch Guide},
