Setup initial report skeleton

--- a/report/main.tex
+++ b/report/main.tex
@@ -1,31 +1,28 @@
-\documentclass{article}
-\usepackage[utf8]{inputenc}
-\usepackage{graphicx}
-\usepackage{float}
-\usepackage{color}
-\usepackage[dvipsnames]{xcolor}
-\usepackage{listings}
-\usepackage{enumitem}
-\usepackage{tabularx}
-\usepackage[citestyle=authoryear,bibstyle=nature]{biblatex}
-\usepackage[colorlinks,pdfencoding=auto]{hyperref}
-\usepackage[danish]{babel}
+\input{preamble}
 
 \addbibresource{bib.bib}
 
-\title{Bachelor project}
-\author{Mie Wetke Fust and Peter Konnerup Moss}
+\title{Køkkenhave App}
+\author{Mie Wetke Fust \& Peter Konnerup Moss}
 \date{2021}
 
 \begin{document}
 
 \maketitle
 
+\newpage
 \tableofcontents
 \newpage
 
+\input{dokumentation}
+\input{design}
+\input{brugervejledning}
+\input{refleksion}
+\input{sammenligning}
+
 \nocite{*}
 
+\newpage
 \printbibliography[heading=bibintoc]
 
 \end{document}
