--- a/report/bib.bib
+++ b/report/bib.bib
@@ -26,3 +26,9 @@
     isbn = {978-0135245125},
     year = {2019}
 }
+
+@article {
+    coolors,
+    title = {Coolors.co},
+    url = {https://coolors.co}
+}
