Added button to start create garden activity
Should work after merge with feature_creategardenactivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Vegetable Gardening</string>
+    <string name="createGarden">New Garden</string>
 </resources>
