layout specify location

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">Vegetable Gardening</string>
     <string name="createGarden">New Garden</string>
-    <string name="create_location_text">Hvor er dit planteområde lokaliseret?</string>
+    <string name="create_location_text">Where is your planting area located?</string>
 </resources>
