Report skeleton for documentation

--- a/report/dokumentation.tex
+++ b/report/dokumentation.tex
@@ -1,2 +1,13 @@
 \newpage
 \section{Dokumentation}
+
+\subsection{Overordnede opbygning}
+
+\subsection{XML}
+
+\subsection{Opret et nyt planteområde}
+\subsubsection{Vælg område}
+
+\subsubsection{Byg layoutet}
+
+\subsubsection{Vælg planter}
