--- a/report/design.tex
+++ b/report/design.tex
@@ -43,11 +43,11 @@ Til hhv. vand og stjerner
 
 \subsection{Sketches}
 
-\includegraphics[width=0.5\textwidth]{img/s1-1.jpg}\\
-\includegraphics[width=0.5\textwidth]{img/s1-3.jpg}\\
-\includegraphics[width=0.5\textwidth]{img/s1-5.jpg}\\
-\includegraphics[width=0.5\textwidth]{img/s1-7.jpg}\\
-\includegraphics[width=0.5\textwidth]{img/s1-9.jpg}\\
+\includegraphics[width=1\textwidth]{img/s1-1.jpg}\\
+\includegraphics[width=1\textwidth]{img/s1-3.jpg}\\
+\includegraphics[width=0.6\textwidth]{img/s1-5.jpg}\\
+\includegraphics[width=1\textwidth]{img/s1-7.jpg}\\
+\includegraphics[width=1\textwidth]{img/s1-9.jpg}\\
 
 \subsection{Wireframes}
 
@@ -55,7 +55,7 @@ Til hhv. vand og stjerner
     \item Navigationen er altid synlig i bunden af skærmen for hurtigt at kunne skife mellem og gå tilbage til forskellige dele af appen
 \end{itemize}
 
-\includegraphics[width=0.5\textwidth]{img/s1-4.jpg}\\
+\includegraphics[width=1\textwidth]{img/s1-4.jpg}\\
 
 \begin{itemize}
     \item Grid frem for liste for overblik over hvor planterne er
@@ -76,6 +76,13 @@ Til hhv. vand og stjerner
     \item Popup til at udføre "hurtige actions" og for at undgå for mange knapper på griddet så det bliver uoverskueligt og småt
 \end{itemize}
 
+\includegraphics[width=0.5\textwidth]{img/s1-10.jpg}\\
+
+\begin{itemize}
+    \item Man starter med at vælge lokation, da det har indflydelse på de actions, man senere skal foretage
+    \item Hver location har et ikon samt en tekst
+\end{itemize}
+
 \includegraphics[width=0.5\textwidth]{img/s1-8.jpg}\\
 
 \begin{itemize}
@@ -83,3 +90,5 @@ Til hhv. vand og stjerner
     \item Man kan tilføje og slette rækker og kolonner for at gøre plads til flere eller færre planter
     \item Man kan hive en plantekasse eller potte ned på griddet for at indikere at der er noget her
 \end{itemize}
+
+
