Notes about font added to documentation

--- a/report/bib.bib
+++ b/report/bib.bib
@@ -26,6 +26,20 @@
     year = {2020}
 }
 
+@article {
+    fonts,
+    title = {Fonts in XML},
+    url = {https://developer.android.com/guide/topics/ui/look-and-feel/fonts-in-xml},
+    year = {2020}
+}
+
+@article {
+    roboto-condensed,
+    title = {Roboto Condensed},
+    url = {https://fonts.google.com/specimen/Roboto+Condensed},
+    year = {2021}
+}
+
 @book {
     nerd,
     title = {Android Programming - The Big Nerd Ranch Guide},
