--- a/report/design.tex
+++ b/report/design.tex
@@ -3,19 +3,30 @@
 
 \subsection{Styleguide}
 
+\subsubsection*{Skrifttyper}
+
+Appen bruger skrifttypen Roboto Condensed \footcite{roboto-condensed} til al tekst.
+
+\begin{figure}[H]
+    \label{font}
+    \centering
+    \includegraphics[width=1\textwidth]{img/s1-11.png}
+    \caption{Roboto font}
+\end{figure}
+
 \subsubsection*{Farver}
 
 Farverne er valgt med udgangspunkt i farver som man tit møder, når man arbejder med planter. F.eks. repræsenterer grøn planter og jordfarverne potter og jord.
 
 \begin{figure}[H]
-    \label{farveskema}
+    \label{primære-farver}
     \centering
     \includegraphics[width=0.7\textwidth]{img/colors.png}
     \caption{Primære appfarver}
 \end{figure}
 
 \begin{figure}[H]
-    \label{farveskema}
+    \label{sekundære-farver}
     \centering
     \includegraphics[width=0.7\textwidth]{img/extra-colors.png}
     \caption{Ekstra appfarver}
