--- a/report/bib.bib
+++ b/report/bib.bib
@@ -26,6 +26,20 @@
     year = {2020}
 }
 
+@article {
+    imagebutton,
+    title = {ImageButton},
+    url = {https://developer.android.com/reference/android/widget/ImageButton},
+    year = {2020}
+}
+
+@article {
+    uitest,
+    title = {Test UI for a single app},
+    url = {https://developer.android.com/training/testing/ui-testing/espresso-testing},
+    year = {2020}
+}
+
 @book {
     nerd,
     title = {Android Programming - The Big Nerd Ranch Guide},
