Feature creategardenactivity and specifylocationfragment (#32)
* Activity and initial specifylocationfragment

* Added button to start create garden activity

Should work after merge with feature_creategardenactivity

* Renamed view to _ since it is unused

* Colors from styleguide

* font and space sizes and images for buttons for specifying location

* Choose plant view created from a simple array

* Choose plant view created from a simple array

* Updated fonts and spacing

* image buttons for all images in specify location

* Image buttons for specify location styled in size and placement

* Colors in themes updated

* Updated list layout, still not done

* drawings for indoors, outdoors, and greenhouse

* New pictures for specify location added to xml

* layout specify location

* Buttons now work in specify location fragment

* Using a ViewModel for plants now

We do this so that it's easier to present the data we want and keep the
rest for the model and viewmodel to handle

* Removed redundant attribute

* Minor changes to layout of choose plant

* Specify location buttons now have text

* Added roboto condensed as a font option

* Documentation for specify location

* Fixed warning regarding constraint layout for add button in main activity

* Documentation updated and switched from string to enum in specify location

* Updated bibliography

* Now using roboto condensed for list and search field

* Updated to comments in #32

* Trying another action to build project

This was needed since androidx didn't work properly on the old setup

* New action to build project

Old action completed in 2 seconds, so I don't think that it was working

Co-authored-by: Peter K. Moss <peter@moss.dk>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Vegetable Gardening</string>
+    <string name="createGarden">New Garden</string>
+    <string name="create_location_text">Where is your planting area?</string>
+    <string name="outdoors">Outdoors</string>
+    <string name="indoors">Indoors</string>
+    <string name="greenhouse">Greenhouse</string>
 </resources>
