--- a/report/bib.bib
+++ b/report/bib.bib
@@ -27,9 +27,23 @@
 }
 
 @article {
+    imagebutton,
+    title = {ImageButton},
+    url = {https://developer.android.com/reference/android/widget/ImageButton},
+    year = {2020}
+}
+
+@article {
     fonts,
     title = {Fonts in XML},
     url = {https://developer.android.com/guide/topics/ui/look-and-feel/fonts-in-xml},
+    year = {2020}
+}
+
+@article {
+    uitest,
+    title = {Test UI for a single app},
+    url = {https://developer.android.com/training/testing/ui-testing/espresso-testing},
     year = {2020}
 }
 
