Layout required the search to be an edittext for font to work
Searching implemented and by default the edittext is focused when
starting the fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="outdoors">Outdoors</string>
     <string name="indoors">Indoors</string>
     <string name="greenhouse">Greenhouse</string>
+    <string name="search_text">Search</string>
 </resources>
