--- a/report/dokumentation.tex
+++ b/report/dokumentation.tex
@@ -16,3 +16,9 @@ Hver af knapperne har en \texttt{listener}. Når brugeren har valgt en lokation,
 \subsubsection{Byg layoutet}
 
 \subsubsection{Vælg planter}
+
+\texttt{fragment\_choose\_plant.xml} layoutet gør brug af en \texttt{EditText}, som udgør et søgefelt, og et \texttt{RecyclerView}, som er listen af planter.
+
+\subsection{Datarepræsentation}
+
+
