Data basis section and user test section

--- a/report/dokumentation.tex
+++ b/report/dokumentation.tex
@@ -3,6 +3,17 @@
 
 \subsection{Overordnede opbygning}
 
+\subsubsection{Datagrundlag}
+\begin{itemize}
+    \item Generelle handlinger i forskellige måneder - \hyperlink{https://www.idenyt.dk/kokkenhaven/}{https://www.idenyt.dk/kokkenhaven/}
+    \item Højsæson og høst - \hyperlink{https://saeson-web.dk/frugt-groent-i-saeson/}{https://saeson-web.dk/frugt-groent-i-saeson/}
+    \item Oversigt over græntsager - \hyperlink{https://haveselskabet.dk/groentsager}{https://haveselskabet.dk/groentsager}
+    \item Meget om kartofler - \hyperlink{https://www.danespo.com/dansk-forbruger/l\%C3\%A6ggekartofler/dyrkningsvejledning-l\%C3\%A6ggekartofler-til-din-have}{https://www.danespo.com/dansk-forbruger/l\%C3\%A6ggekartofler/dyrkningsvejledning-l\%C3\%A6ggekartofler-til-din-have}
+    \item Generel side - \hyperlink{https://minkøkkenhave.dk/dyrkningsvejledning/}{https://minkøkkenhave.dk/dyrkningsvejledning/}
+    \item Planting calendar \hyperlink{https://www.almanac.com/gardening/planting-calendar}{https://www.almanac.com/gardening/planting-calendar}
+    \item Årstidernes plantekalender \hyperlink{https://issuu.com/aarstiderne\_com/docs/aarstidernes-plante-og-saa-kalender}{https://issuu.com/aarstiderne\_com/docs/aarstidernes-plante-og-saa-kalender}
+\end{itemize}
+
 \subsection{XML}
 
 \subsection{Opret et nyt planteområde}
