Results from specify location, grid and choose plant tied together
Updated how the viewmodels are accessed and created a viewmodel for the
current garden to keep track of this before it is saved in the garden
viewmodel. To do so we needed the fragment:fragment_ktx library.

Select Plant text is not yet shown and might be deleted later but for
now it is in the string resources.

Gardens are represented by:

* Location
* Name
* Plants
* Grid tiles (tileIds)

Moved everything regarding the recyclerview into ChoosePlantFragment to
provide the Viewholder with data for adding items to the current garden viewmodel

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="indoors">Indoors</string>
     <string name="greenhouse">Greenhouse</string>
     <string name="search_text">Search</string>
+    <string name="select_plant_text">Select Plant</string>
 </resources>
