Feature create grid fragment (#63)
* Added Garden data model (#45)

* Added Garden data model

* Revert to fragmentManager due to compile issues

* Feature grid setup (#46)

* Add column button now works once

* Add column button works completely

* Code organizing

* Code organizing

* Both add column and add row buttons work for create grid fragment

* Feature connect creategarden fragments (#47)

* Added Garden data model

* Revert to fragmentManager due to compile issues

* Results from specify location, grid and choose plant tied together

Updated how the viewmodels are accessed and created a viewmodel for the
current garden to keep track of this before it is saved in the garden
viewmodel. To do so we needed the fragment:fragment_ktx library.

Select Plant text is not yet shown and might be deleted later but for
now it is in the string resources.

Gardens are represented by:

* Location
* Name
* Plants
* Grid tiles (tileIds)

Moved everything regarding the recyclerview into ChoosePlantFragment to
provide the Viewholder with data for adding items to the current garden viewmodel

* Optimized imports

* Removing choose plant fragment after selecting a plant

* Update from development (#49)

* Data basis section and user test section (#44)

* Data basis section and user test section

* Delete org.mockito.plugins.MockMaker

See #44

Co-authored-by: Peter K. Moss <peter@moss.dk>

* Runs on all pull requests (#48)

Co-authored-by: miewetkefust <48484088+miewetkefust@users.noreply.github.com>

* Using navigationComponent due to fragmentManager depricated (#51)

* Feature change grid size (#52)

* Code organizing and xml for add column left button

* Works when layout in corner

* Initial grid now has the ability to set size of tiles in code

* Code organizing

* Size of grid tiles are now set to fit 4 in width of any phone size

* Number of gridtiles now depends on size of phone

* Add butto

--- a/report/dokumentation.tex
+++ b/report/dokumentation.tex
@@ -14,6 +14,17 @@
     \item Årstidernes plantekalender \hyperlink{https://issuu.com/aarstiderne\_com/docs/aarstidernes-plante-og-saa-kalender}{https://issuu.com/aarstiderne\_com/docs/aarstidernes-plante-og-saa-kalender}
 \end{itemize}
 
+\subsubsection{Datarepræsentation}
+
+Vi har tre datastrukturer, som vi bruger til at abstrahere haver, planter og placeringen af en plante i haveområdet.
+
+Placeringen af en plante er abstraheret til at være et koordinat, som beskriver rækken og kolonnen planten er placeret i.
+
+Haver er repræsenteret med en type, et navn og to maps, der hver repræsenterer hvilke tiles der ligger hvor og hvilken plante der er plantet på det givne tile.
+Haven bruger maps da det er en effektiv måde at koble en nøgle til en værdi, i vores tilfælde altså en placering til et id eller en plante.
+
+Planter er repræsenteret som en \texttt{Plant}, som har et navn, så vi kan adskille hver plante.
+
 \subsection{XML}
 
 \subsection{Opret et nyt planteområde}
@@ -25,6 +36,7 @@ Den overordnede aktivitet til at oprette et nyt planteområde \texttt{CreateGard
 Hver af knapperne har en \texttt{listener}. Når brugeren har valgt en lokation, sørger den gældende \texttt{listener} for at skifte fragment, og sende info om den valgte lokation med i fragmentets konstruktør i form af et \texttt{enum}.
 
 \subsubsection{Byg layoutet}
+Når fragmentet skal bruges, bliver der i \texttt{onCreateView} sat fire felter i en tabel ind, som udgør et udgangspunkt for at bygge en have. \texttt{fragment\_create\_grid.xml} indeholder kun knapper til at ændre på størrelsen af en tabel. Hvert felt udgør en knap, som brugeren kan trykke på, og som leder til \texttt{ChoosePlantFragment.kt}. Når brugeren trykker på en af knapperne i xml-filen, ændres størrelsen på tabellen ved at indsætte eller fjerne felter. Størrelsen på et felt er sat ud fra telefonskærmens bredde, så brugeren altid har plads til fire felter, som fordeler sig ligeligt på skærmen. 
 
 \subsubsection{Vælg planter}
 
@@ -32,9 +44,3 @@ Hver af knapperne har en \texttt{listener}. Når brugeren har valgt en lokation,
 Grunden til at vi gør brug af en \texttt{EditText} frem for \texttt{SearchView} er, at \texttt{SearchView} ikke understøtter en brugerdefineret font og den har nogle funktioner, som vi ikke ønsker at gøre brug af, hvorfor det giver bedre mening at bruge en \texttt{EditText}.
 
 Til at vise listen af planter gør vi brug af designmønsteret \texttt{MVVM} - \texttt{Model View ViewModel} - da vi ønsker at kunne repræsentere vores data på tværs af lifecycles.
-
-Planter er repræsenteret i en datastruktur, som hedder \texttt{Plant}, så vi har en abstrakt måde at arbejde med planter på.
-
-\subsection{Datarepræsentation}
-
-
