--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="indoors">Indoors</string>
     <string name="greenhouse">Greenhouse</string>
     <string name="search_text">Search</string>
+    <string name="select_plant_text">Select Plant</string>
+    <string name="add_column_text">Add column</string>
+    <string name="add_row_text">Add row</string>
 </resources>
