--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="select_plant_text">Select Plant</string>
     <string name="add_column_text">Add column</string>
     <string name="add_row_text">Add row</string>
+    <string name="name_your_garden">Name your garden</string>
+    <string name="save_garden_text">save garden</string>
 </resources>
