updated from comments on #70

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,5 @@
     <string name="add_column_text">Add column</string>
     <string name="add_row_text">Add row</string>
     <string name="name_your_garden">Name your garden</string>
-    <string name="save_garden_text">save garden</string>
+    <string name="save_garden_text">Save garden</string>
 </resources>
