--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="add_row_text">Tilføj række</string>
     <string name="bed_button_text">Bed</string>
     <string name="plant_button_text">Planter</string>
+    <string name="save_garden_text">Gem bed</string>
+    <string name="name_your_garden">Navngiv dit bed</string>
 </resources>
