--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="harvest_text">Høst</string>
     <string name="water_text">Vand</string>
     <string name="details_text">Detaljer</string>
+    <string name="category_format">%1$s: %2$s</string>
 </resources>
