Explanation on the new flower icon

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="category_format">%1$s: %2$s</string>
     <string name="no_plantables_text">Der er ingen planter, der kan plantes i øjeblikket</string>
     <string name="plantbare_planter">Plantbare planter</string>
+    <string name="explanation_new_plants">Der er i øjeblikket mulighed for at plante/så i dit bed!</string>
 </resources>
