--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Køkkenhave</string>
-    <string name="createGarden">Nyt bed</string>
+    <string name="createBed">Nyt bed</string>
     <string name="create_location_text">Hvor er dit bed?</string>
     <string name="outdoors">Udendørs</string>
     <string name="indoors">Indendørs</string>
@@ -16,10 +16,15 @@
     <string name="harvest_text">Høst</string>
     <string name="water_text">Vand</string>
     <string name="details_text">Detaljer</string>
-    <string name="category_format">%1$s: %2$s</string>
     <string name="no_plantables_text">Der er ingen planter, der kan plantes i øjeblikket</string>
-    <string name="plantbare_planter">Plantbare planter</string>
+    <string name="plantable_pants">Plantbare planter</string>
     <string name="explanation_new_plants">Der er i øjeblikket mulighed for at plante/så i dit bed!</string>
     <string name="weather_api_url">https://dmigw.govcloud.dk/v2/metObs/collections/observation/items?%1$s</string>
     <string name="explanation_check_water">Baseret på vejret i dit område, kan det være, dine planter har brug for vand</string>
+    <string name="missing_info">Ingen info</string>
+    <string name="sow">Sås</string>
+    <string name="plant">Plantes</string>
+    <string name="planted_date_text">Plantet</string>
+    <string name="last_watered_text">Sidst vandet</string>
+    <string name="harvested_text">Høstet</string>
 </resources>
