First user test documented

--- a/report/brugertests.tex
+++ b/report/brugertests.tex
@@ -1,1 +1,5 @@
 \section{Brugertests}
+Vi har igennem udviklingsprocessen af appen udført X brugertests med Y forskellige brugere.
+
+\subsection{Brugertest 1}
+Ved den første brugertest, sammen med bruger 1, efter sprint 2, var der ikke meget funktionalitet endnu. Brugertesten foregik ved, at vi forklarede den overordnede idé med appen, samt at den var langt fra færdig, og lod derefter brugeren prøve appen selv. Her var brugeren meget forvirret over, hvorfor hun ikke kunne tilføje flere bed. Det blev dermed tydeligt, at vores navngivning af forskellige dele af en have ikke var korrekt, og at det, vi havde kaldt et "haveområde", skulle omdøbes til et "bed". Den ønskede funktionalitet fra brugeren var nemlig allerede implementeret, men ikke intuitiv.
