--- a/report/main.tex
+++ b/report/main.tex
@@ -14,11 +14,16 @@
 \tableofcontents
 \newpage
 
-\input{dokumentation}
 \input{design}
+\newpage
 \input{brugervejledning}
+\newpage
 \input{brugertests}
+\newpage
+\input{dokumentation}
+\newpage
 \input{refleksion}
+\newpage
 \input{sammenligning}
 
 \nocite{*}
