--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,5 @@
     <string name="no_name_given_text">Indtast venligst et navn til dit bed</string>
     <string name="create_grid_title">Design dit bed</string>
     <string name="empty_garden_text">Du har ingen oprettede bed. Tryk på plus-knappen nede i hjørnet for at komme i gang og oprette dine bed</string>
+    <string name="choose_location_text">Vælg lokation</string>
 </resources>
