--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,6 @@
     <string name="guide_create_grid_text">Udfyld dit bed ved at trykke på en firkant og vælg fra listen. Du kan ændre størrelsen på bedet ved plus- og minus-knapperne</string>
     <string name="plant_details_dialog_title">Hvad har du foretaget dig?</string>
     <string name="plants_details_dialog_guide_text">Her kan du bogføre, hvis du har vandet eller høstet din plante. Tryk på detaljer for at se mere om din plante.</string>
+    <string name="register_water_text">Registreret som vandet</string>
+    <string name="register_harvest_text">Registreret som høstet</string>
 </resources>
