--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="add_column_text">Tilføj kolonne</string>
     <string name="add_row_text">Tilføj række</string>
     <string name="bed_text">Bed</string>
-    <string name="plant_button_text">Planter</string>
+    <string name="plant_text">Planter</string>
     <string name="save_garden_text">Gem bed</string>
     <string name="name_your_garden">Navngiv dit bed</string>
     <string name="harvest_text">Høst</string>
