Documentation for lexicon

--- a/report/dokumentation.tex
+++ b/report/dokumentation.tex
@@ -84,5 +84,6 @@ For at gøre arbejdet med disse DAO'er lidt lettere for os har vi lavet et \text
 
 Selve databasen er en singleton-instans, så vi ikke behøver at lave en ny instans hver gang vi skal tilgå databasen, da det er en relativt omstændig process. Dette er også anbefalet af Google på deres Android developer side \hyperlink{https://developer.android.com/training/data-storage/room/#database}{https://developer.android.com/training/data-storage/room/#database}
 
-\subsubsection{Dynamisk data}
-Her noget om viewmodels og csv-filen
+\subsection{Leksikon}
+
+Vi har lavet en oversigt over alle planter, som man kan navigere til ved brug af menuen i bunden af skærmen. Her kan man klikke på ``Planter'' og får vist en liste over planterne. Hvis man vælger en plante, kommer man videre ind og kan se alle informationer, som appen har, om denne plante.
