No longer ugly navigation drawer but white instead of our own white

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,5 @@
     <string name="add_sort_text">Tilføj sort</string>
     <string name="sort">Sort</string>
     <string name="gem_sort">Gem sort</string>
+    <string name="lexicon">Leksikon</string>
 </resources>
